--- a/README.Rmd
+++ b/README.Rmd
@@ -81,7 +81,7 @@ into the middle of a symmetrical color palette `pal_unikn` (with 11 colors):
 
 - Primary and default color palette (`pal_unikn`):
 
-```{r pal_unikn, eval = TRUE, fig.width = 7, fig.height = 5}
+```{r pal_unikn, eval = TRUE, fig.align = 'center', fig.width = 7, fig.height = 5}
 # Default color palette: ----- 
 pal_unikn  # 10 default colors (web/sRGB)
 
@@ -95,7 +95,7 @@ seecol(pal_unikn)
 
 ### All color palettes
 
-```{r pal_all, eval = TRUE, fig.width = 7, fig.height = 6}
+```{r pal_all, eval = TRUE, fig.align = 'center', fig.width = 7, fig.height = 6}
 seecol("all")
 ```
 
@@ -155,7 +155,7 @@ More flexible and complex color palettes can be created by using the `col_scale(
 
 The `plot_pal()` function provides a quick overview over the contents of a color palette and allows comparisons between color palettes: 
 
-```{r seecol_pref, eval = TRUE, fig.width = 7, fig.height = 5}
+```{r seecol_pref, eval = TRUE, fig.align = 'center', fig.width = 7, fig.height = 5}
 # Plot a color palette: ----- 
 seecol(pal_unikn_pref)
 ```
@@ -177,7 +177,7 @@ usecol(pal_seeblau, n = 4)
 
 ### Extending and creating color palettes
 
-The `mi()` function provides color gradients based on given colors or color palettes. 
+The `seecol` function provides color gradients based on given colors or color palettes. 
 This serves 2 main functions: 
 
 1. Extending existing color palettes (to arbitrary lengths):
@@ -250,11 +250,11 @@ Examples for using color palettes in graphs:
 
 ```{r use_pal_demo_barplot, eval = FALSE}
 # Using color palettes:
-barplot(1/sqrt(1:11),  col = seecol(pal_unikn))
-barplot(1/sqrt(10:25), col = seecol(pal_unikn_pair))
+barplot(1/sqrt(1:11),  col = usecol(pal_unikn))
+barplot(1/sqrt(10:25), col = usecol(pal_unikn_pair))
 
 # Using n colors of a palette:
-barplot(1/sqrt(1:5), col = seecol(pal_unikn, n = 5)) 
+barplot(1/sqrt(1:5), col = usecol(pal_unikn, n = 5)) 
 
 # Scatterplot:
 plot(x = runif(200), y = runif(200), "p", pch = 16, cex = 5, col = adjustcolor(pal_unikn, alpha.f = 1))   # 0 transparency
@@ -294,9 +294,57 @@ image(z = cos(r^2) * exp(-r/6), col = colorRampPalette(c(pal_seeblau, pal_pinky)
 # contour(z, add = TRUE, drawlabels = FALSE)
 ```
 
-## Text
+
+## Text decorations
 
 `unikn` also provides some functions for plotting graphical elements (like boxes) and styled text (with decorations like colored backgrounds or underlining). 
+By default, the text-decoration functions assume that you want to add styled text to an existing plot, unless the `new_plot` argument specifies a type of plot to be generated. 
+As the use of these functions is explained in detail in `vignette("Text")`, we only provide some examples here: 
+
+### Mark
+
+```{r mark_new_plot, echo = TRUE, eval = TRUE, fig.align = 'center', fig.width = 3, fig.height = 3}
+mark(labels = c("Markieren", "ist ein Bestandteil", "von Studieren."), 
+     x = 0, y = .8, y_layout = .03, cex = 1.5, new_plot = "slide")
+```
+
+### Underline
+
+The `uline` function allows emphasizing text by plotting it with colored underlining (to provide the functionality of "Unterstreichen"): 
+
+```{r uline_demo, echo = TRUE, eval = TRUE, fig.align = 'center', fig.width = 3, fig.height = 3}
+uline(labels = c("Geradlinig", "Authentisch", "Beweglich", "Offen", "Paradiesisch"), 
+      x = .05, y = .9, y_layout = "even", cex = 1.1, font = 2, new_plot = "slide")
+```
+
+### Post
+
+The `post` function allows adding text to a rectangular `xbox` (to provide the functionality of "Merken"): 
+
+```{r post_demo, echo = TRUE, eval = TRUE, fig.align = 'center', fig.width = 2, fig.height = 2}
+xbox(col = usecol(pal_seeblau[[5]]), dim = c(2, 2))
+post(labels = c("Für eine", "Kultur der", "Kreativität"), x = .1, y = .8, cex = 1.5, font = 2)
+```
+
+### Headings
+
+The `heading` function is a convenient wrapper around `mark`: 
+
+```{r heading_demo, echo = TRUE, eval = TRUE, fig.align = 'center', fig.width = 2, fig.height = 3}
+heading(labels = c("pa-", "ra-", "die-", "sisch"))
+```
+
+### URLs
+
+Finally, `url_unikn` allows formatting URLs the uni.kn way: 
+
+```{r url_post, echo = TRUE, eval = TRUE, fig.align = 'center', fig.width = 2, fig.height = 2}
+my_url <- url_unikn("https://www.uni-konstanz.de/")  # input URL as copied from web browser
+
+post(labels = my_url, x = .2, y = .1, font = 4, new_plot = "xbox")
+```
+
++++ here now +++
 
 Some important caveats:
 
@@ -333,7 +381,7 @@ Post: Generating logo
 
 ```{r post_logo, eval = FALSE, fig.width = 2, fig.height = 2}
 # unikn: 
-post(labels = "unikn::", cex = 2.5, font = 2, y = .4)  # save in size: 250 x 250 pixel
+post(labels = "unikn::", cex = 2.5, font = 2, y = .4, new_plot = "blank")  # save in size: 250 x 250 pixel
 
 # R: 
 post(labels = "R", col_bg = pal_seeblau[[5]], 
