--- a/README.Rmd
+++ b/README.Rmd
@@ -296,7 +296,7 @@ image(z = cos(r^2) * exp(-r/6), col = colorRampPalette(c(pal_seeblau, pal_pinky)
 
 Using **unikn** in `ggplot` calls (using **ggplot2**):
 
-```{r use_pal_ggplot2, eval = TRUE, out.width = "75%", fig.asp = .75, fig.align = 'center'}
+```{r use_pal_ggplot2, eval = TRUE, out.width = "80%", fig.asp = .66, fig.align = 'center'}
 ## Source of original example: 
 ## https://www.r-graph-gallery.com/137-spring-shapes-data-art/ 
 
@@ -305,7 +305,7 @@ ngroup <- 50
 names <- paste("G_", seq(1, ngroup), sep = "")
 DAT <- data.frame()
 
-set.seed(44)
+set.seed(40)
 for(i in seq(1:30)){
     data=data.frame( matrix(0, ngroup , 3))
     data[ , 1] = i
@@ -321,15 +321,17 @@ dim(DAT)
 
 ## (a) using RColorBrewer: 
 library(RColorBrewer)
-cur_col <- brewer.pal(12, "Paired") 
+cur_col <- brewer.pal(11, "Paired") 
 cur_col <- colorRampPalette(cur_col)(ngroup)
 cur_col <- cur_col[sample(c(1:length(cur_col)), size = length(cur_col))] # randomize
 
 ## (b) using unikn:
 library(unikn)
 cur_col <- usecol(pal = pal_unikn, n = ngroup)
-cur_col <- cur_col[sample(c(1:length(cur_col)), size = length(cur_col))] # randomize
+# cur_col <- cur_col[sample(c(1:length(cur_col)), size = length(cur_col))] # randomize
 cur_col <- unname(cur_col)  # remove names
+
+# cur_col <- rep(cur_col, 5)
 
 ## Check:
 # cur_col
@@ -338,7 +340,7 @@ cur_col <- unname(cur_col)  # remove names
 # ggplot call: 
 library(ggplot2)
 ggplot(DAT, aes(x = Year, y = Value, fill = Group)) + 
-  geom_area(alpha = 1, color = "white", size = .01 ) +
+  geom_area(alpha = 1, color = Grau, size = .01 ) +
   theme_bw() +
   # scale_fill_brewer(color = "red", breaks = rev(levels(DAT$Group)))+
   scale_fill_manual(values = cur_col) +
