--- a/README.Rmd
+++ b/README.Rmd
@@ -272,7 +272,7 @@ image(m, col = seecol(pal_seeblau))
 image(m, col = usecol(pal_peach))
 image(m, col = usecol(pal_seegruen))
 image(m, col = usecol(pal_petrol))
-image(m, col = usecol(pal_pinky))
+# image(m, col = usecol(pal_pinky))
 image(m, col = usecol(pal_bordeaux))
 ```
 
