update text and examples

--- a/README.Rmd
+++ b/README.Rmd
@@ -23,10 +23,10 @@ library(unikn)  # load package
 
 The **unikn** package enables the use some elements of the [University of Konstanz](https://www.uni-konstanz.de/)'s corporate design 
 for users of [R](https://www.r-project.org/). 
-For instance, it provides a range of beautiful color palettes for scientific visualizations that are consistent with 
-[corporate design specifications](https://www.uni-konstanz.de/en/university/news-and-media/create-online-and-print-media/corporate-design/colours-for-complex-graphics/). 
+For instance, it provides a range of beautiful color palettes for scientific visualizations that are consistent with the [University of Konstanz](https://www.uni-konstanz.de/)'s [corporate design specifications](https://www.uni-konstanz.de/en/university/news-and-media/create-online-and-print-media/corporate-design/colours-for-complex-graphics/). 
 
-## Motivation
+
+## Motivation 
 
 <!-- uni.kn logo and link: -->  
 <!-- ![](./inst/pix/logo.svg) --> 
@@ -37,7 +37,7 @@ For instance, it provides a range of beautiful color palettes for scientific vis
 <!-- unikn CD: --> 
 
 In 2014, the [University of Konstanz](https://www.uni-konstanz.de/) introduced a highly recognizable corporate design. 
-Its key component is the consistent use of a `seeblau` color and a corresponding color palette that blends various shades of `seeblau` (in boxes, lines, and other graphical elements) with text (in black-and-white). (See the official [brand information](https://www.uni-konstanz.de/en/university/news-and-media/create-online-and-print-media/corporate-design/) and the 
+Its key component is the consistent use of a `Seeblau` color and a corresponding color palette that blends various shades of `Seeblau` (in boxes, lines, and other graphical elements) with text (in black-and-white). (See the official [brand information](https://www.uni-konstanz.de/en/university/news-and-media/create-online-and-print-media/corporate-design/) and the 
 [Corporate Design Manual (pdf)](https://www.uni-konstanz.de/typo3temp/secure_downloads/57014/0/0143c03b80bd1fa99843c8f8686f806305928078/UKN_CD_Manual_150921.pdf) for details.) 
 
 <!-- Goals of the unikn pgk: --> 
@@ -71,19 +71,25 @@ library(unikn)  # load the package
 
 A distinctive and recognizable color scheme is the most obvious element of the [University of Konstanz](https://www.uni-konstanz.de/)'s corporate design. 
 
-
 ### Basic color palettes
 
 Basic color palettes are specified according to the **Corporate Design Manual** [(pdf)](https://www.uni-konstanz.de/typo3temp/secure_downloads/57014/0/0143c03b80bd1fa99843c8f8686f806305928078/UKN_CD_Manual_150921.pdf):
 
-We added the darkest seeblau color (from `pal_seeblau[5]`) to the front of `pal_unikn` and place `white` 
-into the middle of a symmetrical color palette `pal_unikn` (with 11 colors): 
+Our basic color palette `pal_unikn` combines:  
 
-- Primary and default color palette (`pal_unikn`):
+- 5 shades of `pal_seeblau` (reversed, i.e., from darker to lighter); 
+
+- the base R color `"white"` (as the center color); 
+
+- 4 shades of grey (`pal_grau[1:4]`); 
+
+- the base R color `"black"` (as the last color).
+
+This yields a symmetrical default color palette `pal_unikn` consisting of 11&nbsp;colors: 
 
 ```{r pal_unikn, eval = TRUE, fig.align = 'center', fig.width = 7, fig.height = 5}
 # Default color palette: ----- 
-pal_unikn  # 10 default colors (web/sRGB)
+pal_unikn  # 11 default colors
 
 # See color palett (by plotting it): ----- 
 seecol(pal_unikn)
@@ -91,22 +97,26 @@ seecol(pal_unikn)
 
 <!-- <img src = "./inst/pix/README-pal_unikn-1.png" align = "center" alt = "pal_unikn" style = "border:10;"/> -->
 
-- Secondary color palette (`pal_unikn_ppt`): An alternative color palette with more muted colors (intended for PowerPoint presentations) is provided as `pal_unikn_ppt`. 
+- A shorter version consisting of 10 colors is provided as `pal_unikn_web`. 
+
+- An alternative color palette with 10 more muted colors (intended for PowerPoint presentations) is provided as `pal_unikn_ppt`. 
+
+Evaluating `seecol(pal = "unikn_basic")` shows these 3 basic unikn color palettes. 
 
 ### All color palettes
+
+Beyond the 3 variants of `pal_unikn`, the **unikn** package provides the following color palettes: 
 
 ```{r pal_all, eval = TRUE, fig.align = 'center', fig.width = 7, fig.height = 6}
 seecol("all")
 ```
 
-### Additional color palettes
-
-The following dedicated color palettes are defined in an Excel file on [Colours for complex graphics](https://www.uni-konstanz.de/en/university/news-and-media/create-online-and-print-media/corporate-design/colours-for-complex-graphics/) 
-and provided here by the following color palettes: 
+Specifically, the Excel file on [Colours for complex graphics](https://www.uni-konstanz.de/en/university/news-and-media/create-online-and-print-media/corporate-design/colours-for-complex-graphics/) 
+defines 9 additional color palettes that are exported by **unikn** as the following named color palettes: 
 
 ```{r pal_additional, eval = FALSE}
-# All palettes:
-seecol("all")
+# Show 9 color gradient palettes:
+seecol(pal = "grad_all")
 
 # 8 mono-tone palettes: ----- 
 # Name:          Nr:           Tone:          
@@ -131,7 +141,7 @@ All preferred colors are contained in a corresponding color palette `pal_unikn_p
 pal_unikn_pref             # color palette of preferred colors
 pal_unikn_pref[1]          # preferred (named) color 1
 pal_unikn_pref[[1]]        # color value 1: #59C7EB"
-pal_unikn_pref["seeblau"]  # preferred color by name
+pal_unikn_pref["Seeblau"]  # preferred color by name
 ```
 
 [^1]: Whereas the official definition does not identify a preferred color for the Ampel color palette (`pal_signal`), 
@@ -147,32 +157,32 @@ seecol(pal_unikn_dark)   # palette of  8 dark colors (in 4 pairs)
 seecol(pal_unikn_pair)   # palette of 16 paired colors (in 8 pairs)
 ```
 
-More flexible and complex color palettes can be created by using the `col_scale()` function. 
+More flexible and complex color palettes can be created by using the `seecol()` and `usecol()` functions. 
+
 
 ## Color-related functions
 
+The `seecol()` and `usecol()` functions provide a convenient interface for _viewing_ and _using_ color palettes. 
+
 ### Plotting color palettes
 
-The `plot_pal()` function provides a quick overview over the contents of a color palette and allows comparisons between color palettes: 
+The `seecol()` function provides a quick overview over the contents of a color palette and allows comparisons between color palettes: 
 
 ```{r seecol_pref, eval = TRUE, fig.align = 'center', fig.width = 7, fig.height = 5}
 # Plot a color palette: ----- 
 seecol(pal_unikn_pref)
 ```
 
-
 ### Partial color palettes
 
-When only a subset of a color palette are needed, the `use_pal_n()` function provides a reasonable subset of a known color palette:
+When only a subset of a color palette are needed, the `seecol()` and `usecol()` functions provide a reasonable subset of a known color palette:
 
-```{r pal_n, eval = FALSE}
+```{r pal_n, eval = TRUE, out.width = "75%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
 # From pal_unikn (default): ----- 
-seecol(n = 4)
 seecol(n = 4)
 
 # From pal_seeblau: ----- 
-usecol(pal_seeblau, n = 1)
-usecol(pal_seeblau, n = 4)
+seecol(pal_seeblau, n = 4)
 ```
 
 ### Extending and creating color palettes
@@ -182,7 +192,7 @@ This serves 2 main functions:
 
 1. Extending existing color palettes (to arbitrary lengths):
 
-```{r col_scale_1, eval = FALSE}
+```{r col_scale_1, eval = TRUE, out.width = "75%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
 # Extending color palettes: ----- 
 seecol(pal_unikn, n = 21)  
 seecol(pal_seeblau, n = 8)
@@ -193,60 +203,33 @@ seecol(pal_seeblau, n = 8)
 New color palettes of arbitrary length can be created by combining colors (from **unikn** or base R) 
 and the desired resolution of the color gradient (as an integer argument): 
 
-```{r col_scale_2, eval = FALSE}
+```{r col_scale_2, eval = TRUE, out.width = "75%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
 # Combining colors: ----- 
 seecol(c(Seeblau, "white", Pinky), 11) 
-seecol(c(Signal, Petrol), 10)  
 seecol(c(Karpfenblau, Seeblau, "gold"), 10) 
 ```
 
+3. Mixing and merging colors and color palettes to create new color palettes. 
 For best results, consider combining existing color palettes and individual colors into new color palettes: 
 
-```{r col_scale_3, eval = FALSE}
+```{r col_scale_3, eval = TRUE, out.width = "75%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
 # Combining color palettes (and colors): ----- 
 seecol(c(rev(pal_seeblau), "white", pal_peach), 11)
 seecol(c(rev(pal_seeblau), "white", pal_pinky), 11)
-seecol(c(rev(pal_seeblau), "white", pal_petrol), 11)
 seecol(c(rev(pal_seeblau), "white", pal_seegruen), 11)
 seecol(c(rev(pal_petrol),  "white", pal_bordeaux), 11)
 ```
 
+
 ## Using color palettes
 
-Using color palettes (currently) requires using `unlist` or calling another function:
+The **unikn** package exports the color palettes shown by `seecol(pal = "all")` and 
+the 9&nbsp;preferred colors of `pal_unikn_pref` (e.g., `Seeblau`, `Seegruen`, etc.) as named colors. 
 
-```{r unlist_pal, eval = FALSE}
-is.list(pal_unikn)  # TRUE
-typeof(pal_unikn)   # "list"
+The `usecol()` function provides convenient access and additional options for using them in graphs. 
+Some examples for using 
 
-unlist(pal_unikn)  # returns a named vector
-typeof(unlist(pal_unikn)) # "character"
-
-unlist(pal_unikn)["seeblau3"]  # call by name
-unlist(pal_unikn)[2]  # call by index
-
-barplot(rep(6:3, 4), col = colorRampPalette(pal_unikn)(7))
-```
-
-### ToDo <img src = "./inst/pix/todo.png" alt = "ToDo" align = "right" width = "120px" style = "width: 120px; float: right; border:10;"/>
-
-1. Create a main `seecol` function that operates on all color palettes and provides the following functionality:
-
-   - plot an overview over all available color palettes (like `display.brewer.all`); 
-   - plot detailed info on any specific (or a random) color palette (like `plot_pal`); 
-   - return `n` dedicated colors of a specific palette (like `pal_n`); 
-   - allows extending or combining colors and color palettes (like `col_scale`); 
-   - allows adding transparency, etc. (like `piratepal`). 
-
-2. Provide more convenient color objects:
-
-   - provide preferred colors (e.g., `Seeblau`, `Peach`) as atomic named vectors (of type character), to be referrable by name and number).
-   - provide all color palettes as named vectors (rather than lists): `seeblau`, `peach`, etc. 
-
-
-### Demos
-
-1. Examples for using **unikn** color palettes and functions in graphs: 
+1. Some examples of using **unikn** color palettes and functions in base R plots: 
 
 ```{r use_pal_demo_barplot, eval = TRUE, out.width = "75%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
 # (a) Using color palettes:
@@ -259,7 +242,7 @@ barplot(1/sqrt(1:5), col = usecol(pal_unikn, n = 5))
 plot(x = runif(200), y = runif(200), "p", pch = 16, cex = 5, col = adjustcolor(pal_unikn, alpha.f = .33)) # +transparency
 ```
 
-2. Visualizing **unikn** color palettes with `image`: 
+2. Visualizing various **unikn** color palettes with `image`: 
 
 ```{r use_pal_demo_image_1, eval = TRUE, fig.width = 3.5, fig.height = 4, fig.show = 'hold'}
 # Random images:
@@ -267,30 +250,29 @@ set.seed(1)
 n <- 20
 m <- matrix(rnorm(n*n), ncol = n, nrow = n)
 
-image(m, col = seecol(pal_seeblau))
+image(m, col = seecol(pal_seeblau))  # seecol() shows & use colors 
 
-image(m, col = usecol(pal_peach))
+image(m, col = usecol(pal_peach))    # usecol() only uses colors
 image(m, col = usecol(pal_seegruen))
 image(m, col = usecol(pal_petrol))
-# image(m, col = usecol(pal_pinky))
 image(m, col = usecol(pal_bordeaux))
 ```
 
-3. Geometric images with `image`: 
+3. More geometric images with `image`: 
 
 ```{r use_pal_demo_image_2, eval = TRUE, fig.width = 3.5, fig.height = 4, fig.show = 'hold'}
 # (a) pal_seeblau and pal_seegruen:
 x <- y <- seq(-4 * pi, 4 * pi, len = 15)
 r <- sqrt(outer(x^2, y^2, "+"))
 image(z = cos(r^2) * exp(-r/6), col = colorRampPalette(c(pal_seeblau, pal_seegruen))(10), 
-      main = "Shades of seeblau/seegruen", axes = FALSE)
+      main = "Shades of Seeblau/Seegruen", axes = FALSE)
 # contour(z, add = TRUE, drawlabels = FALSE)
 
 # (b) pal_seeblau and pal_pinky:
 x <- y <- seq(-4 * pi, 4 * pi, len = 75)
 r <- sqrt(outer(x^2, y^2, "+"))
 image(z = cos(r^2) * exp(-r/6), col = colorRampPalette(c(pal_seeblau, pal_pinky))(20), 
-      main = "Shades of seeblau/pinky", axes = FALSE)
+      main = "Shades of Seeblau/Pinky", axes = FALSE)
 # contour(z, add = TRUE, drawlabels = FALSE)
 ```
 
@@ -347,7 +329,7 @@ As the use of these functions is explained in detail in `vignette("Text")`, we o
 
 ### Mark
 
-The `mark` function allows emphasizing text by plotting it with colored background (to provide the functionality of "Markieren"):  
+The `mark()` function allows emphasizing text by plotting it with colored background (to provide the functionality of "Markieren"):  
 
 ```{r mark_new_plot, echo = TRUE, eval = TRUE, fig.align = 'center', fig.width = 3, fig.height = 3}
 mark(labels = c("Markieren", "ist ein Bestandteil", "von Studieren."), 
@@ -356,7 +338,7 @@ mark(labels = c("Markieren", "ist ein Bestandteil", "von Studieren."),
 
 ### Underline
 
-The `uline` function allows emphasizing text by plotting it with colored underlining (to provide the functionality of "Unterstreichen"):  
+The `uline()` function allows emphasizing text by plotting it with colored underlining (to provide the functionality of "Unterstreichen"):  
 
 ```{r uline_demo, echo = TRUE, eval = TRUE, fig.align = 'center', fig.width = 3, fig.height = 3}
 uline(labels = c("Geradlinig", "Authentisch", "Beweglich", "Offen", "Paradiesisch"), 
@@ -365,7 +347,7 @@ uline(labels = c("Geradlinig", "Authentisch", "Beweglich", "Offen", "Paradiesisc
 
 ### Post
 
-The `post` function allows adding text to a rectangular `xbox` (to provide the functionality of "Merken"):  
+The `post()` function allows adding text to a rectangular `xbox` (to provide the functionality of "Merken"):  
 
 ```{r post_demo, echo = TRUE, eval = TRUE, fig.align = 'center', fig.width = 2, fig.height = 2}
 xbox(col = usecol(pal_seeblau[[5]]), dim = c(2, 2))
@@ -374,7 +356,7 @@ post(labels = c("Für eine", "Kultur der", "Kreativität"), x = .1, y = .8, cex 
 
 ### Headings
 
-The `heading` function is a convenient wrapper around `mark`:  
+The `heading()` function is a convenient wrapper around `mark`:  
 
 ```{r heading_demo, echo = TRUE, eval = TRUE, fig.align = 'center', fig.width = 2, fig.height = 3}
 heading(labels = c("pa-", "ra-", "die-", "sisch"))
@@ -384,7 +366,7 @@ Headings violating the official recommendations (e.g., step-wise titles) will ge
 
 ### URLs
 
-Finally, the `url_unikn` function allows formatting URLs the uni.kn way: 
+Finally, the `url_unikn()` function allows formatting URLs the uni.kn way: 
 
 ```{r url_post, echo = TRUE, eval = TRUE, fig.align = 'center', fig.width = 2, fig.height = 2}
 my_url <- url_unikn("https://www.uni-konstanz.de/")  # input URL as copied from web browser
@@ -405,7 +387,9 @@ Nevertheless, the **unikn** package helps preventing common mistakes by novices 
 Overall, we hope that the following functions will be useful for plotting graphical elements (e.g., boxes, logos, etc.) and achieving a uniform look when styling visualizations.
 
 
-## ToDo <img src = "./inst/pix/todo.png" alt = "ToDo" align = "right" width = "120px" style = "width: 120px; float: right; border:10;"/>
+## ToDo 
+
+<img src = "./inst/pix/todo.png" alt = "ToDo" align = "right" width = "140px" style = "width: 140px; float: right; border:10;"/>
 
 The **unikn** package is work in progress. We are still working on:
 
